# ENG5220-Real-Time-Embedded-Programming

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CameraManager.cpp  CameraManager.hpp  CaptureImages  GestureRecognizer.cpp  GestureRecognizer.hpp  Makefile  README.md  SignDatabase.hpp  SignDatabaseTest.cpp  SignLanguage  TrainModel  Translator.hpp  capture_images.cpp  cmake_install.cmake  hand_gesture.cpp  header.h  knn_model.xml  main.cpp  predict.cpp  tmp.c  train.cpp
logs/: devlog_2026-02-11  devlog_2026_02_18  devlog_2026_02_24
test_files/: CameraManager.h
